# aptalproje

./: .gitignore  .gitmodules  aptalproje.code-workspace  partitions.csv  sdkconfig.old  touch_docs.md  touch_example
littlefs_data/: book.txt  llm_build_instructions.md
main/: CMakeLists.txt  battery_manager.cpp  battery_manager.hpp  bmp580_manager.cpp  bmp580_manager.hpp  button_manager.cpp  button_manager.hpp  common_data.cpp  common_data.hpp  display_manager.cpp  display_manager.hpp  idf_component.yml  main.cpp  network_manager.cpp  network_manager.hpp  scd4x_manager.cpp  scd4x_manager.hpp  storage_manager.cpp  storage_manager.h  touch_manager.cpp  touch_manager.hpp  ui_assets.hpp  ui_manager.cpp  ui_manager.hpp
